# WojcikWMSEyes2.0

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SettingDialog.cpp  SettingDialog.h  main.cpp  resources.qrc
